Rename `core` blueprint to `web`

--- a/holdmypics/web/templates/tiled.jinja
+++ b/holdmypics/web/templates/tiled.jinja
@@ -3,7 +3,7 @@
 {% block wrapper_class %}{{ super() }} space-y-5{% endblock %}
 {% block header_extra %}
   <div class="row text-row">
-    <a href="{{ url_for('core.index') }}">Home</a>
+    <a href="{{ url_for('web.index') }}">Home</a>
   </div>
 {% endblock %}
 {% block main_content %}
