--- a/holdmypics/web/templates/index.jinja
+++ b/holdmypics/web/templates/index.jinja
@@ -119,7 +119,7 @@
     </form>
 
     <div>
-      <a href="{{ url_for('core.tiled') }}">Tiled</a>
+      <a href="{{ url_for('web.tiled') }}">Tiled</a>
     </div>
 
     <section class="pt-3" id="routes">
