--- a/src/css/layout/content.css
+++ b/src/css/layout/content.css
@@ -6,4 +6,14 @@
   .section {
     @apply rounded border border-gray-300 px-4 md:px-9;
   }
+
+  .text-row {
+    @apply px-3 md:px-0;
+  }
+
+  @screen md {
+    #example-images {
+      max-height: 50vh;
+    }
+  }
 }
