Rename the generic generator to be more specific

--- a/holdmypics/web/templates/base.jinja
+++ b/holdmypics/web/templates/base.jinja
@@ -24,8 +24,7 @@
         </div>
         <div>Roboto is licensed under the <a href="{{ url_for('static', filename='licenses/apache.txt') }}">Apache License</a>.</div>
       </div>
-      {% set tag = "v" ~ version %}
-      {% set github_url = "https://github.com/mvwicky/holdmypics/tree/" ~ tag %}
+      {% set github_url = "https://github.com/mvwicky/holdmypics/tree/v" ~ version %}
       <div class="footer-group">
         <h6>Created by Michael Van Wickle</h6>
         <h6>
