--- a/holdmypics/web/templates/base.jinja
+++ b/holdmypics/web/templates/base.jinja
@@ -1,16 +1,20 @@
 {% extends "./base-out.html" %}
 {% from "./helpers.jinja" import external %}
 {% block content %}
-  {% block header %}
+  {% block site_header %}
+    <header class="full-bleed text-center flex justify-center">
+      <h1>Hold my Pics</h1>
+    </header>
+  {% endblock %}
+  {% block page_header %}
     <header class="{% block header_class %}section py-4 space-y-5{% endblock %}">
       <div class="row text-row">
-        <h1>{{ title }}</h1>
+        <h2>{{ title }}</h2>
       </div>
       {% block header_extra %}{% endblock %}
     </header>
   {% endblock %}
   {% block main_content %}{% endblock %}
-
   {% block footer %}
     <footer>
       <div class="footer-group">
